--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-hello world
+<html>
+<head>
+  <title>pajaW</title>
+  <!--inline css LUL -->
+  <style>
+    body{
+    background-image: url('img/pajawhd.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    }
+    img{
+    display: none;
+    width: 100%;
+    height: 100%;
+    }
+    p.nodontdoit:hover + img{
+    display: block;
+    }
+  </style>
+
+</head>
+<body>
+
+  <!--pajlada looked at my code PogChamp -->
+
+  <p class="nodontdoit"> DONT MOUSE OVER YOU WILL BE SP00KED</p>
+  <img src="img/pajlady.png"/>
+
+</body>
+</html>
